# dic9315-anfis-project

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  Dockerfile  Dockerfile.ci  Dockerfile.mlflow  HOW_TO_RUN.md  Makefile  NOTEBOOK_FIX_INSTRUCTIONS.md  README.md  config.py  credit_risk_analysis.ipynb  credit_student_pipeline.py  data_preprocessing.py  docker-compose.staging.yml  docker-compose.yml  evaluation.py  experiment_report.md  feature_selection.py  main.py  main_pipeline.py  methodology_section.md  models.py  pyproject.toml  requirements-dev.txt  requirements-torch-cpu.txt  requirements.txt  sonar-project.properties  test_anfis.py  test_pipeline.py
.github/workflows/: ci.yml  docker-build.yml  release.yml
.ipynb_checkpoints/: credit_risk_analysis-checkpoint.ipynb  data_preprocessing-checkpoint.py  feature_selection-checkpoint.py  main_pipeline-checkpoint.py
docs/source/: api.rst  conf.py  index.rst
models/: anfis_network.py
results/: model_comparison.csv  statistical_significance.csv
src/: __init__.py  anfis_network.py  config.py  credit_student_pipeline.py  data_preprocessing.py  evaluation.py  explainability.py  feature_selection.py  main_pipeline.py  models.py  test_anfis.py  test_pipeline.py
tests/: conftest.py  test_imports.py
tests/e2e/: test_end_to_end_smoke.py
tests/integration/: test_pipeline.py
tests/unit/: test_anfis.py  test_evaluation.py  test_explainability.py  test_feature_selection.py  test_mlflow_integration.py  test_models.py  test_preprocessing.py
