[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anfis-credit-risk"
version = "1.0.0"
description = "Credit Risk Prediction Pipeline: ANFIS vs Baseline Models"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Academic use only"}
authors = [
    {name = "Équipe 3 - TP2 ANFIS", email = "noreply@example.com"}
]
keywords = ["anfis", "credit-risk", "machine-learning", "fuzzy-logic", "neural-networks"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "scikit-learn>=1.2.0",
    "imbalanced-learn>=0.10.0",
    "scikit-fuzzy>=0.4.0",
    "openpyxl>=3.0.0",
    "xlrd>=2.0.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "scipy>=1.9.0",
    "shap>=0.41.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "pip-audit>=2.4.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Repository = "https://github.com/Hayou-Azidkhellou/dic9315-anfis-project"

# ============================================================================
# RUFF CONFIGURATION
# ============================================================================
[tool.ruff]
# Exclude common directories
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "models",
    "plots",
    "results",
    "reports",
]

# Line length to match Black
line-length = 88
indent-width = 4

# Target Python 3.8+
target-version = "py38"

[tool.ruff.lint]
# Enable comprehensive rule sets
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort (import sorting)
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "RET",   # flake8-return
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "ERA",   # eradicate (commented-out code)
    "PL",    # pylint
    "PERF",  # performance anti-patterns
]

# Ignore specific rules
ignore = [
    "E501",    # Line too long (handled by Black)
    "PLR0913", # Too many arguments
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements (ML pipelines can be long)
    "PLR2004", # Magic value used in comparison
    "N803",    # Argument name should be lowercase (for X, y in ML)
    "N806",    # Variable in function should be lowercase (for X, y in ML)
    "ERA001",  # Commented-out code (false positives on doc comments)
    "E722",    # Bare except (acceptable in some ML contexts)
    "ARG002",  # Unused method argument (common in sklearn API)
]

# Allow fix for all enabled rules (when `--fix` is provided)
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Ignore import violations in __init__.py
"__init__.py" = ["F401", "F403"]
# Ignore unused imports in test files
"test_*.py" = ["F401", "ARG"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Like Black, respect magic trailing commas
skip-magic-trailing-comma = false

# Like Black, automatically detect line endings
line-ending = "auto"

# ============================================================================
# BLACK CONFIGURATION
# ============================================================================
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.git
  | \.mypy_cache
  | \.ruff_cache
  | \.venv
  | venv
  | __pycache__
  | build
  | dist
  | models
  | plots
  | results
  | reports
)/
'''

# ============================================================================
# MYPY CONFIGURATION
# ============================================================================
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start permissive, gradually enable
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Ignore missing imports for third-party libraries without stubs
[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "imblearn.*",
    "skfuzzy.*",
    "scipy.*",
    "matplotlib.*",
    "seaborn.*",
    "shap.*",
]
ignore_missing_imports = true

# ============================================================================
# PYTEST CONFIGURATION
# ============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# ============================================================================
# COVERAGE CONFIGURATION
# ============================================================================
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# ============================================================================
# BANDIT CONFIGURATION (Security Linter)
# ============================================================================
[tool.bandit]
exclude_dirs = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "tests",
]
skips = [
    "B101",  # assert_used (common in tests)
]
